[project]
name = "wechat-finder-dlna"
version = "0.4.0"
description = "Capture WeChat Video Channel (视频号) live streams via fake screen casting (DLNA / AirPlay / Chromecast)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "zeroconf>=0.131.0",
    "protobuf>=4.25.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.23.0",
]
authors = [{ name = "gtoxlili" }]
keywords = [
    "wechat", "weixin", "dlna", "upnp", "airplay", "chromecast",
    "google-cast", "live-stream", "screen-casting", "video-channel",
    "stream-capture", "视频号", "投屏", "直播",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/gtoxlili/wechat-finder-dlna"
Repository = "https://github.com/gtoxlili/wechat-finder-dlna"
Issues = "https://github.com/gtoxlili/wechat-finder-dlna/issues"

[project.scripts]
wechat-finder-dlna = "wechat_finder_dlna.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
